mansi ecommerce homepage redesign

--- a/public/assets/css/slider.css
+++ b/public/assets/css/slider.css
@@ -636,7 +636,7 @@ button.swiper-pagination-bullet {
   left: 0;
   width: 50%;
   padding-left: 5%;
-  color: #fff;
+  color: #000;
 }
 
 .content .title {
