--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,17 +1,432 @@
-.container-hang {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;1,100;1,300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    text-transform: capitalize;
+    -webkit-transition: .2s linear;
+    transition: .2s linear;
+}
+
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    scroll-padding-top: 5rem;
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 0.5rem 9%;
+    z-index: 1000;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: #fff;
+    -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+
+.header .logo img {
+    width: 160px;
+    height: 60px;
+    object-fit: contain;
+}
+
+
+.header .logo {
+    margin-right: auto;
+    font-size: 2.5rem;
+    color: #10221b;
+    font-weight: bolder;
+}
+
+
+.header .navbar a {
+    margin-left: 2rem;
+    font-size: 1.7rem;
+    color: #10221b;
+}
+
+.header .navbar a:hover {
+    color: #B78948;
+}
+
+.header .navbar #nav-close {
+    font-size: 5rem;
+    cursor: pointer;
+    color: #B78948;
     display: none;
+}
+
+.header .icons a,
+.header .icons div {
+    font-size: 2.5rem;
+    margin-left: 2rem;
+    cursor: pointer;
+    color: #B78948;
+}
+
+.header .icons a:hover,
+.header .icons div:hover {
+    color: #B78948;
+}
+
+.header #menu-btn {
+    display: none;
+}
+
+.products_cards {
+    background: url(../images/a3e1f129-98b6-e3f1-c769-a621b6f771c9.png);
+    padding-inline: 60px;
+    padding-block: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.products_cards p {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.products_cards h3 {
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-family: "Marcellus", serif;
+    margin-top: 5px;
+}
+
+.cards_productsCont {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+    margin-top: 40px;
+}
+
+.cards_productsCont div {
+    width: 350px;
+    height: 350px;
+    overflow: hidden;
+}
+
+.cards_productsCont img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.what_we_do {
+    padding-inline: 100px;
+    padding-block: 60px;
+    display: flex;
+    align-items: start;
+    gap: 80px;
+}
+
+.images_what {
+    height: 80vh;
+    position: sticky;
+    top: 100px;
+}
+
+.vectorOne {
+    position: absolute;
+    height: 25px;
+    top: 0;
+    object-fit: contain;
+    left: 44%;
+}
+
+.vectorTwo {
+    position: absolute;
+    height: 25px;
+    bottom: 0;
+    object-fit: contain;
+    left: 38%;
+}
+
+.vectorThree {
+    position: absolute;
+    width: 25px;
+    left: 0;
+    object-fit: contain;
+    top: 44%;
+}
+
+.vectorFour {
+    position: absolute;
+    width: 25px;
+    right: 0;
+    object-fit: contain;
+    top: 44%;
+}
+
+.images_what .mainIMg {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    position: relative;
+}
+
+.what_container {
+    background: url(../images/bg2.jpg);
+    background-position: top left;
+    background-size: contain;
+    width: 75%;
+}
+
+.what_container h1 {
+    font-family: "Marcellus", serif;
+    font-size: 45px;
+    text-align: left;
+    font-weight: 500;
+}
+
+.main_cards_who {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    margin-top: 40px;
+}
+
+.cards_whatDo {
+    padding: 24px;
+    border: 1px solid #B78948;
+    border-radius: 5px;
+}
+
+.cards_whatDo h3 {
+    font-family: "Marcellus", serif;
+    font-size: 28px;
+    text-align: left;
+}
+
+.cards_whatDo span {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    line-height: 140%;
+}
+
+.contact_us {
+    background: #B78948;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+/* Footer Styling */
+.footer {
+    background-color: #121212;
+    color: #fff;
+    padding: 40px 80px;
+    font-family: Arial, sans-serif;
+}
+
+/* Top Section */
+.footer-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #333;
+    padding-bottom: 20px;
+}
+
+.logo img {
+    height: 40px;
+}
+
+.company-description {
+    font-size: 14px;
+    color: #aaa;
+}
+
+/* Middle Section */
+.footer-middle {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0;
+}
+
+.footer-section {
+    flex: 1;
+    margin-right: 20px;
+}
+
+.footer-section h3 {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.footer-section p,
+.footer-section a {
+    font-size: 14px;
+    color: #ddd;
+    text-decoration: none;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    margin-bottom: 5px;
+}
+
+.footer-section ul li a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
+/* Social Icons */
+.social-icons a {
+    color: #fff;
+    margin-right: 10px;
+    font-size: 16px;
+}
+
+/* Bottom Section */
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #333;
+    padding-top: 15px;
+    font-size: 14px;
+    color: #aaa;
+}
+
+.footer-links a {
+    color: #aaa;
+    margin-left: 15px;
+    text-decoration: none;
+}
+
+.footer-links a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+
+    .footer-top,
+    .footer-middle,
+    .footer-bottom {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer-section {
+        margin-bottom: 20px;
+    }
+
+    .footer-links {
+        margin-top: 10px;
+    }
+}
+
+
+/* .container-hang {
+    display: none;
+}
+
+
+.container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    max-width: 480px;
+    gap: 24px;
+    margin: 50px auto;
+    height: 2040px;
+    align-items: center;
+}
+
+.card {
+    width: 90%;
+    margin: 0 25px;
+    box-sizing: border-box;
+    background: #dedede;
+    min-height: 400px;
+    border-radius: 32px;
+    position: sticky;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'system-ui', sans-serif;
+    font-size: 90px;
+    font-weight: medium;
+    color: #FFF;
+}
+
+.one {
+    top: 50px;
+    background: #6b04fd;
+}
+
+.two {
+    top: 80px;
+    background: #5a03d5;
+}
+
+.three {
+    top: 110px;
+    background: #4b05ad;
+}
+
+.four {
+    top: 140px;
+    background: #2c0076;
 }
 
 #carousel_adef {
     display: block;
 }
 
+
+.main_products {
+    padding: 25px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.products_mainCont {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+.main_products img {
+    aspect-ratio: 1;
+    height: 470px;
+    object-fit: cover;
+}
+
 @media screen and (max-width:550px) {
     .container-hang {
         display: block;
     }
-    
+
     #carousel_adef {
         display: none;
     }
-}
+} */
