--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -9,9 +9,52 @@
 @media screen and (max-width:550px) {
     .container-hang {
         display: block;
+        margin-top: 60px;
+        padding: 20px;
     }
     
     #carousel_adef {
         display: none;
     }
+}
+
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.card {
+  width: 100%;
+  
+  box-sizing: border-box;
+  background: #dedede;
+  min-height: 400px;
+  border-radius: 32px;
+  position: sticky;
+  
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  font-family : 'system-ui', sans-serif;
+  font-size: 90px;
+  font-weight: medium;
+  color: #FFF;
+}
+
+.one {
+  top: 50px;
+  background: #B78948; /* Original color */
+}
+.two {
+  top: 80px;
+  background: #C79A5A; /* Slightly lighter */
+}
+.three {
+  top: 110px;
+  background: #D7AD6C; /* Medium-light */
+}
+.four {
+  top: 140px;
+  background: #E7C07E; /* Even lighter */
 }
