--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -566,14 +566,14 @@ html {
     border-radius: 10px;
 }
 
-.whats_appBtn {
+.whatsapp_Btn {
     position: fixed;
     bottom: 20px;
     right: 10px;
     z-index: 99;
 }
 
-.whats_appBtn button {
+.whatsapp_Btn button {
     border: 1px solid green;
     border-radius: 10px;
     background: #fff;
