--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -160,6 +160,15 @@ html {
     top: 100px;
 }
 
+.full-video {
+    width: 100%;
+    height: 100vh; /* Full height of the viewport */
+    object-fit: cover; /* Ensures the video covers the entire area */
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
 .vectorOne {
     position: absolute;
     height: 25px;
@@ -240,6 +249,7 @@ html {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     line-height: 140%;
+    padding:10px;
 }
 
 .phone_mobilewhat {
@@ -558,7 +568,11 @@ html {
 .gallery.active {
     display: block;
 }
-
+.gallery_dta {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
 .gallery img {
     width: 300px;
     height: 300px;
